fix spacing and formatting

--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,6 @@ body {
   align-items: center;
 }
 
-h1 {
-  text-align: center;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  padding-top: 0;
-}
 
 select {
   -webkit-appearance: none;
@@ -111,34 +105,11 @@ select::-ms-expand {
 }
 
 #date {
-padding-bottom: 5px;
-font-weight: bolder;
+  padding-bottom: 5px;
+  font-weight: bolder;
 }
 
 
-/* media query */
-
-@media only screen  and (max-width : 1224px) {
-
-  .select {
-    
-    width: 20em;
-    height: 3em;
-    
-    
-  }
-
-  body{
-  font-size: 15px;
-  margin-top: 0px;
-
-  }
-
-
-  #full{
-      display: none;
-  }
-}
 
 /* buttons css */
 
@@ -215,14 +186,244 @@ font-weight: bolder;
 
 /* text sa top */
 
-#full
-{
- text-align: center;
- margin:0;
- padding-top:0;
- font-weight: bolder;
- 
+#full {
+  text-align: center;
+  margin: 0;
+  padding-top: 0;
+  font-weight: bolder;
+
 
 }
 
 
+
+/* css ng glitch */
+
+
+.blink {
+  text-transform: uppercase;
+  display: block;
+  font-family: 'Inter', sans-serif;
+  align-content: center;
+  font-weight: bolder;
+  margin-bottom: 13px;
+  color: white;
+  font-size: 4vw;
+  letter-spacing: 2px;
+  animation: glitch 2s steps(100) infinite;
+}
+
+/* GLITCH EFFECT */
+@keyframes glitch {
+  0% {
+    text-shadow: 1px 0 0 red, -1px 0 0 blue;
+  }
+
+  4% {
+    text-shadow: 1px 0 0 red, -1px 0 0 blue;
+  }
+
+  5% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  10% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  11% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
+  }
+
+  15% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
+  }
+
+  16% {
+    text-shadow: -1px 0 0 red, 1px 0 0 lime;
+  }
+
+  20% {
+    text-shadow: -1px 0 0 red, 1px 0 0 lime;
+  }
+
+  21% {
+    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
+  }
+
+  30% {
+    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
+  }
+
+  31% {
+    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
+  }
+
+  40% {
+    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
+  }
+
+  41% {
+    text-shadow: 50px 0 0 blue, -50px 0 0 lime;
+  }
+
+  42% {
+    text-shadow: 0 0 0 blue, 0 0 0 lime;
+  }
+
+  43% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
+  }
+
+  46% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
+  }
+
+  47% {
+    text-shadow: -1px 0 0 red, 1px 0 0 lime;
+  }
+
+  50% {
+    text-shadow: -1px 0 0 red, 1px 0 0 lime;
+  }
+
+  51% {
+    text-shadow: 1px 0 0 red, -1px 0 0 blue;
+  }
+
+  55% {
+    text-shadow: 1px 0 0 red, -1px 0 0 blue;
+  }
+
+  56% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  60% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  61% {
+    text-shadow: 30px 0 0 red, -30px 0 0 lime;
+  }
+
+  62% {
+    text-shadow: 0 0 0 red, 0 0 0 lime;
+  }
+
+  63% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 blue;
+  }
+
+  66% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 blue;
+  }
+
+  67% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  70% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  71% {
+    text-shadow: 70px 0 0 red, -70px 0 0 blue;
+  }
+
+  72% {
+    text-shadow: 0 0 0 red, 0 0 0 blue;
+  }
+
+  73% {
+    text-shadow: 1px 0 0 red, -1px 0 0 blue;
+  }
+
+  76% {
+    text-shadow: 1px 0 0 red, -1px 0 0 blue;
+  }
+
+  77% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  80% {
+    text-shadow: -1px 0 0 red, 1px 0 0 blue;
+  }
+
+  81% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
+  }
+
+  85% {
+    text-shadow: 0.5px 0 0 red, -0.5px 0 0 lime;
+  }
+
+  86% {
+    text-shadow: -1px 0 0 red, 1px 0 0 lime;
+  }
+
+  90% {
+    text-shadow: -1px 0 0 red, 1px 0 0 lime;
+  }
+
+  91% {
+    text-shadow: 60px 0 0 lime, -60px 0 0 blue;
+  }
+
+  92% {
+    text-shadow: 0 0 0 lime, 0 0 0 blue;
+  }
+
+  92% {
+    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
+  }
+
+  95% {
+    text-shadow: 0.7px 0 0 blue, -0.7px 0 0 lime;
+  }
+
+  96% {
+    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
+  }
+
+  99% {
+    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
+  }
+
+  100% {
+    text-shadow: -1px 0 0 blue, 1px 0 0 lime;
+  }
+}
+
+
+/* media query */
+
+@media only screen and (max-width : 1224px) {
+
+  .select {
+
+    width: 20em;
+    height: 3em;
+
+
+  }
+
+  body {
+    font-size: 15px;
+    margin-top: 20px;
+    align-items: center;
+    margin-left: 5em;
+
+  }
+
+  .wrapper {
+    align-items: center;
+    text-align: center;
+
+  }
+
+  #full {
+    display: none;
+  }
+}
